# track-geometry-experiments

./: .gitignore  .gitmodules  .markdownlint.jsonc  AGENTS.md  Cargo.toml  README.md  bacon.toml  flake.nix  index.dev.html  index.html  justfile  rust-toolchain.toml  rustfmt.toml
.cursor/rules/: bevy_api.mdc  bevy_guidelines.mdc
.github/workflows/: deploy.yml  main.yml
assets/: pin.glb
assets/shaders/: contour_lines.wgsl
crates/alignment_path/: Cargo.toml
crates/alignment_path/src/: constraints.rs  elevation.rs  geometry.rs  lib.rs  path.rs
src/: alignment.rs  camera.rs  contour_lines.rs  debug_frame_limiter.rs  hud.rs  main.rs  pin.rs  saveable.rs  spatial.rs  terrain.rs  terrain_contour.rs  terrain_integration.rs  ui_shell.rs
src/alignment/: components.rs  constraints.rs  geometry.rs  mod.rs  render.rs  state.rs  systems.rs  ui.rs
src/terrain/: contour_lines.rs  mod.rs  spatial.rs  terrain_integration.rs
stories/backlog/: 2026-03-01-10-render_all_alignments.md  2026-03-01-3-place_initial_point.md  2026-03-01-5-commit_first_segment.md  2026-03-01-6-preview_subsequent_segments.md  2026-03-01-9-select_move_control_points.md
stories/complete/: 2026-03-01-2-exit_track_building_mode.md  2026-03-01-4-preview_straight_segment.md
stories/in-progress/: 2026-03-01-1-enter_track_building_mode.md  2026-03-01-7-automatic_curve_detection.md  2026-03-01-8-snap_to_tangent.md
