cargo-features = ["codegen-backend"]

[workspace]
members = [".", "crates/alignment_path"]
resolver = "3"

[package]
name = "track_geometry"
version = "0.1.0"
edition = "2024"
description = "A playground for visualizing and optimizing railway alignments"
license-file = "./LICENSE"
repository = "https://github.com/wildwestrom/track-geometry-experiments"
readme = "./README.md"
keywords = ["geometry", "railway", "road", "optimization"]
categories = ["simulation", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
bevy = { version = "0.18", default-features = true, features = [
  ### non-default-features as of 0.17.3
  "serialize",
  "shader_format_wesl",
	"webgpu",
	"bevy_gizmos"
  ### use during development
  # "bevy_debug_stepping",
  # "dynamic_linking",
  # "dev",
] }
bevy_panorbit_camera = { version = "0.34", features = ["bevy_egui"] }
bevy_egui = "0.39"
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
noise = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bevy_tweening = "0.15"
spec_math = "0.1"
glam = { version = "0.30", features = ["serde"] }

[dependencies]
bevy = { workspace = true }
bevy_panorbit_camera = { workspace = true }
bevy_egui = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
bevy_tweening = { workspace = true }
spec_math = { workspace = true }
noise = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alignment_path = { path = "crates/alignment_path" }


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
